correct overflow

--- a/src/index.css
+++ b/src/index.css
@@ -177,3 +177,7 @@ span.flatpickr-weekday,
 .fullWidth{
   width: 100%;
 }
+
+.home .css-ayshjd{
+  overflow: initial;
+}
